--- a/css/screen.scss
+++ b/css/screen.scss
@@ -119,8 +119,8 @@ $ms9: calc($ms8 * $ratio); // 52px
 $ms10: calc($ms9 * $ratio); // 58px
 $ms11: calc($ms10 * $ratio); // 66px
 
-$font-family-primary: Helvetica, arial, sans-serif;
-$font-family-secondary: Times, serif;
+$font-family-primary: 'Droid-Serif', Helvetica, arial, sans-serif;
+$font-family-secondary: 'Inter Web', Times, serif;
 
 // ---
 // Settings: Spacing
@@ -189,6 +189,22 @@ img {
   max-width: 100%; // make images responsive
 }
 
+@font-face {
+  font-family: 'Inter Web';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/Inter-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter Web';
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/Inter-Bold.woff2') format('woff2');
+}
+
 /*---------------------------------------/*
  # ELEMENTS
 /*---------------------------------------*/
@@ -205,6 +221,8 @@ html {
   font-family: $font-family-primary; // global font-family
   color: $color-text-light; // global text color
   scroll-behavior: smooth; // smooth scrolling
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /*
@@ -222,9 +240,20 @@ html {
     Default markup for typographic elements
 */
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $color-text;
+  font-family: $font-family-secondary;
+}
+
 h1 {
   font-size: $ms5;
   font-weight: 700;
+  font-family: 'Playfair Display', serif;
   line-height: calc($baseline * 4);
   margin-bottom: $space-m;
 }
@@ -492,6 +521,21 @@ a:active {
 /*
     Components: Author
 */
+.c-author {
+  display: flex;
+  align-items: center;
+
+  &__image {
+    width: 56px;
+    height: 56px;
+    border-radius: 100%;
+  }
+
+  &__name,
+  &__meta {
+    margin-bottom: 0;
+  }
+}
 
 /*
     Components: Quote
@@ -520,6 +564,10 @@ a:active {
     Scope: Content
     Specific behaviour inside s-content class
 */
+
+.s-content * + h2 {
+  margin-top: $space-xl;
+}
 
 /*---------------------------------------/*
  # UTILITIES
