--- a/css/screen.css
+++ b/css/screen.css
@@ -342,6 +342,8 @@ a:active {
 .c-author {
   display: flex;
   align-items: center;
+  margin-bottom: 1.5rem;
+  gap: 1rem;
 }
 .c-author__image {
   width: 56px;
@@ -350,6 +352,16 @@ a:active {
 }
 .c-author__name, .c-author__meta {
   margin-bottom: 0;
+}
+.c-author__meta {
+  font-size: 0.8888888889rem;
+  font-family: "Inter Web", Times, serif;
+  line-height: 1.5rem;
+  margin-top: 0.25rem;
+}
+.c-author__name {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 /*
